--- a/Code and predictions/Task 1/FLIPR_5_0_Task_1.ipynb
+++ b/Code and predictions/Task 1/FLIPR_5_0_Task_1.ipynb
@@ -20,7 +20,7 @@
         "colab_type": "text"
       },
       "source": [
-        "# **Stick-price prediction**"
+        "# **Stock-price prediction**"
       ]
     },
     {
@@ -32,7 +32,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 72
         },
-        "outputId": "40273b90-f56b-4aeb-cf67-d5c8501bfc4e"
+        "outputId": "d56383d4-40a2-4985-a4b3-9fd8b632d3a9"
       },
       "source": [
         "# Necessary imports\n",
@@ -74,7 +74,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 326
         },
-        "outputId": "8e741383-953d-41dd-d674-a8ce6d5a5e63"
+        "outputId": "741f3718-e8b8-4689-bebc-56ae5e0115e8"
       },
       "source": [
         "df_train = pd.read_csv('Train_dataset.csv')\n",
@@ -318,7 +318,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 929
         },
-        "outputId": "1faddf57-bccc-4bcc-9140-6f78dba44441"
+        "outputId": "f544a057-1683-4bed-94fb-8d34fb7a3472"
       },
       "source": [
         "# Feature generation and rendundancy eradication using the correlation heatmap\n",
@@ -338,7 +338,7 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.axes._subplots.AxesSubplot at 0x7f6faddb39e8>"
+              "<matplotlib.axes._subplots.AxesSubplot at 0x7f58b9b96a90>"
             ]
           },
           "metadata": {
@@ -384,7 +384,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 257
         },
-        "outputId": "c9943e8c-fdaf-4059-a3e1-0b9ba6c49608"
+        "outputId": "c68cd78f-de0a-4a3c-a02a-34c7c963ebb6"
       },
       "source": [
         "X_train.head()"
@@ -566,7 +566,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 202
         },
-        "outputId": "ae5d33f2-6861-4680-ded5-6adec53c6f0b"
+        "outputId": "f84ce355-6fef-433b-fa9a-ff3efc646454"
       },
       "source": [
         "sub = pd.DataFrame({'Stock Index': df_test['Stock Index'], 'Stock Price': y_pred})\n",
@@ -656,7 +656,7 @@
       "source": [
         "# Submission\n",
         "\n",
-        "sub.to_csv('Stock_Price.csv', index = False)"
+        "sub.to_csv('Stock Price (10-Aug).csv', index = False)"
       ],
       "execution_count": 12,
       "outputs": []
